--- a/src/Device.less
+++ b/src/Device.less
@@ -13,7 +13,8 @@
 }
 
 .device-tray {
-  margin: 5vh 0;
+  margin-top: 5%;
+  padding-bottom: 10vh;
   display: grid;
   grid-column-gap: 10%;
   grid-row-gap: 10%;
@@ -24,4 +25,5 @@
   justify-items: center;
   grid-template-columns: repeat(auto-fit, 25%);
   width: 100%;
+  height: fit-content;
 }
